[package]
name = "async-graphql-relay"
description = "Relay support for async-graphql"
version = "0.4.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/async-graphql-relay"
documentation = "https://docs.rs/async-graphql-relay"
repository = "https://github.com/oscartbeaumont/async-graphql-relay"
readme = "README.md"

keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = "3.0.19"
async-graphql-relay-derive = { path = "derive", version = "^0.4" }
async-trait = "0.1.52"
sea-orm = { version = "0.10.2", optional = true }
serde = { version = "1.0.132", optional = true }
uuid = "0.8.2"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }

[workspace]
members = [
    "derive",
    "example"
]
