[package]
name = "async-graphql-relay"
description = "Relay support for async-graphql"
version = "0.4.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/async-graphql-relay"
documentation = "https://docs.rs/async-graphql-relay"
repository = "https://github.com/oscartbeaumont/async-graphql-relay"
readme = "README.md"

keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = "7"
async-graphql-relay-derive = { path = "derive", version = "^0.4" }
async-trait = "0.1.68"
sea-orm = { version = "0.4.2", optional = true }
serde = { version = "1.0.163", optional = true }
uuid = "0.8.2"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }

[workspace]
members = [
    "derive",
    "example"
]
