[package]
name = "async-graphql-relay"
description = "Relay support for async-graphql"
version = "0.5.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/async-graphql-relay"
documentation = "https://docs.rs/async-graphql-relay"
repository = "https://github.com/oscartbeaumont/async-graphql-relay"
readme = "README.md"

keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = "7"
async-graphql-relay-derive = { path = "derive", version = "^0.5" }
sea-orm = { version = "1.1.0", optional = true }
serde = { version = "1.0.163", optional = true }
uuid = "1.17.0"

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }

[workspace]
members = [
    "derive",
    "example"
]
