[package]
name = "async-graphql-relay-example"
version = "0.1.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"

[dependencies]
async-graphql = "3.0.38"
actix-web = "4.3.1"
async-graphql-actix-web = "3.0.38"
async-graphql-relay = { path = "../" }
async-trait = "0.1.68"

[patch.crates-io]
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", branch = "model-with-generics" } # Awaiting release
